--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <title>Document</title>
 </head>
 
-<body>
+<body class="bg-zinc-950">
     <div class="container px-5 py-24 mx-auto">
-        <div id="products" class="flex flex-wrap -m-4">
-
+        <div id="products" class="flex flex-wrap justify-center border-4 border-emerald-600 rounded">
         </div>
     </div>
+    
     <script defer src="./app.js"></script>
 </body>
 
