--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
 </head>
 
 <body class="bg-zinc-950">
-    <div class="container px-5 py-24 mx-auto">
+    <div class="flex justify-between items-centre mt-8 mb-4 p-0 h-24">
+        <p class="border-amber-600 text-amber-500 text-7xl font-sans font-thin tracking-wider border-2 rounded-xl px-2 border-emerald-600 text-emerald-600">StoreTastic</p>
+        <button class="mr-24 mt-auto mb-auto h-fit text-2xl border-amber-600 text-amber-500 font-mono font-thin border-2 rounded-xl px-2 border-emerald-600 text-emerald-600">Cart<sup id="cart" class="text-amber-500 text-3xl border-2 rounded-xl px-2 border-amber-600 bg-black">0</sup></button>
+    </div>
+
+    <div class="container px-0 py-0 mx-auto">
         <div id="products" class="flex flex-wrap justify-center border-4 border-emerald-600 rounded">
         </div>
     </div>
